第4章 临时提交

--- a/3-计算属性/3.2：getter与setter.html
+++ b/3-计算属性/3.2：getter与setter.html
@@ -14,7 +14,7 @@
             el:'#app',
             data:{
                 firstName:'Jack',
-                secondName:'Green'
+                lastName:'Green'
             },
             computed:{
                 fullName:{
