--- a/4-v-bind 及 class 与 style 绑定/4.2：数组语法.html
+++ b/4-v-bind 及 class 与 style 绑定/4.2：数组语法.html
@@ -11,7 +11,11 @@
     <script src="https://unpkg.com/vue/dist/vue.min.js"></script>
     <script type="text/javascript">
         var app=new Vue({
-            
+            el:'#app',
+            data:{
+                activeCls:'active',
+                errorCls:'error'
+            }
         })
     </script>
 </body>
