--- a/5-内置指令/5-3、4：列表渲染+方法与事件.html
+++ b/5-内置指令/5-3、4：列表渲染+方法与事件.html
@@ -21,6 +21,10 @@
         <button @click="counter++">表达式实现：+1</button>
         <button @click="handleAdd()">methods 实现：+1</button>
         <button @click="handleAdd(10)">methods 实现：+10</button>
+        <p>
+            <a href="https://cn.bing.com/" @click="handleClick('禁止打开',$event)">
+            打开链接</a>
+        </p>
     </div>
     <script src="https://unpkg.com/vue/dist/vue.min.js"></script>
     <script type="text/javascript">
@@ -59,6 +63,10 @@
                     console.log(count);
                     count=count || 1;
                     this.counter += count;
+                },
+                handleClick:function(message,event){
+                    event.preventDefault(); //禁止打开链接
+                    window.alert(message);
                 }
             }
         })
