--- a/5-内置指令/5-5  练习-购物车/index.html
+++ b/5-内置指令/5-5  练习-购物车/index.html
@@ -15,6 +15,10 @@
                     <th>商品单价</th>
                     <th>购买数量</th>
                     <th>操作</th>
+                    <th>
+                        <button v-if="isSelectAll" @click="handleCancelChoice">全不选</button>
+                        <button v-else @click="handleChoiceAll">全选</button>
+                    </th>
                 </tr>
                 <tr v-for="(item,index) in list">
                     <td>{{index+1}}</td>
@@ -29,6 +33,10 @@
                     </td>
                     <td>
                         <button @click="handleRemove(index)">移除</button>
+                    </td>
+                    <td>
+                        <input type="checkbox" v-model="item.checked">
+                        <!-- :checked="item.checked" 不行 -->
                     </td>
                 </tr>
             </table>
