--- a/6-表单与v-model/6.1表单的各个控件.html
+++ b/6-表单与v-model/6.1表单的各个控件.html
@@ -16,7 +16,7 @@
         <label>单选按钮</label>
         <p>单选按钮(组合使用时，需要v-model配合value使用)</p>
         <input type="radio" v-model="picked" id="html" value="html1">
-        <lable for="html1">HTML</lable>
+        <lable for="html">HTML</lable>
         <br>
         <input type="radio" v-model="picked" id="js" value="js">
         <lable for="js">JavaScript</lable>
