--- a/7-组件与复用/7.2.2 prop单向数据.html
+++ b/7-组件与复用/7.2.2 prop单向数据.html
@@ -20,7 +20,7 @@
             template:'<div>{{count+1}}</div>',
             data:function(){
                 return {
-                    count:this.initCount
+                    count:this.initCount+1
                 }
             }
         });
