--- a/7-组件与复用/7.3.1 组件通信.html
+++ b/7-组件与复用/7.3.1 组件通信.html
@@ -2,21 +2,30 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>7.3 数据验证</title>
+    <title>7.3 组件通信</title>
 </head>
 <body>
     <div id="app">
         <p><b>使用 v-on ，自定义事件用于组件之间</b></p>
         <p>总数：{{total}}</p>
         <my-component-1 @increase="handleGetTotal" @reduce="handleGetTotal"></my-component-1>
-        <p>使用v-model:</p>
-        <p><b>又是总数total:{{total_v}}</b></p>
-        <span>@input="handleGetTotal"   </span>
+        <button @click="handleTotalIncrease">父组件+1，不会影响子组件</button>
+        <p>---------------------</p>
+
+
+        <p><b>使用v-model:</b></p>
+        <p>又是总数total:{{total_v}}</p>
+        <span>@input="handleGetTotal"</span>
         <my-component-2 @input="handleGetTotal_v"></my-component-2><br>
+
         <p>
-            <span>和 v-model="total"  效果一致</span>
-            <my-component-2 v-model="total_v"></my-component-2>    
+            <span> v-model="total"  效果一致</span>
+            <my-component-2 :value="total_v" @input="total_v=$event.target.value"></my-component-2>
+            <my-component-2 v-model="total_v"></my-component-2>
         </p>
+        <p>-----------------------</p>
+
+
         <p><b>v-model:创建</b></p>
         <p>总数：{{total_m}}</p>
         <my-component-3 v-model="total_m" ></my-component-3>
@@ -35,7 +44,7 @@
                 </div>',
             data:function(){
                 return {
-                    counter:0
+                    counter:5
                 }
             },
             methods:{
@@ -51,7 +60,7 @@
             },
         });
 
-    //组件通信：使用v-model,相当于语法糖
+    //组件通信：使用v-model
         Vue.component('my-component-2',{
             template:'<button @click="handleIncrease">+1</button>',
             data:function(){
@@ -61,7 +70,8 @@
             },
             methods:{
                 handleIncrease:function(){
-                    this.counter--;
+                    console.log(this.counter);
+                    this.counter++;
                     this.$emit('input',this.counter);
                 }
             }
@@ -101,6 +111,9 @@
                 },
                 handleReduce:function(){
                     this.total_m--;
+                },
+                handleTotalIncrease:function(){
+                    this.total++;
                 }
             }
         });
