第7章 组件实例

--- a/7-组件与复用/7.2.1 prop 传递数据.html
+++ b/7-组件与复用/7.2.1 prop 传递数据.html
@@ -19,7 +19,7 @@
         <span>{{initMessage}}</span>
         <my-component_b :message="initMessage"></my-component_b>
 
-        <p><b>结论：</b>如果子组件绑定prop数据，父组件二次改变时prop会再次更改，所以子组件需要把 prop 赋值给 data ，如果需要改变传入的原始值，需要prop+comouted结合</p>
+        <p><b>结论：</b>如果子组件绑定prop数据，父组件二次改变时prop会再次更改，所以子组件需要把 prop 赋值给 data ，如果需要改变传入的原始值，需要prop+computed 结合</p>
         <p>-------------------------</p>
         
         <p>作为转变的原始值</p>
