第八章 指令 未完

--- a/7-组件与复用/7.2.1 prop 传递数据.html
+++ b/7-组件与复用/7.2.1 prop 传递数据.html
@@ -59,7 +59,7 @@
                     <input type="text" v-model="message">\
                     <span>{{message}}</span>\
                     <br>\
-                    <span>子组件绑定comouted(prop改变后)的变量：</span>\
+                    <span>子组件绑定computed(prop改变后)的变量：</span>\
                     <input type="text" :value="com_message">\
                     <span>{{com_message}}</span>\
                 </div>',
